# HelloAgent

./: .env  Constant.py  README.md  models.py  pyproject.toml  requirements.txt
Ticketing_12306_demo/: Ticketing_12306.py  response_no_cookie.html  test.py
a2a_base/: README.md  a2a_client.py  a2a_server.py  mcp_minus_server.py  pyproject.toml
agent_numerologyBot_demo/: .dockerignore  .env  Dockerfile  Dockerfile_venv  README.md  docker-compose.yml  models.py  mytools.py  pyproject.toml  server.py
agent_numerologyBot_demo/static/css/: style.css
agent_numerologyBot_demo/templates/: index.html
base/: .env  first_gent.py  function_calling.py  helloAgent.py
base/key_design/: create-act-agent.py  plan-and-execute.py  self_ask_demo.py
base/key_design/reAct/: CustomReActAgent.py  create-act-agent.py  tool.py
mas_autogen/advance/: autogen_code.ipynb  data2VisualView.py  data_analysis.py  search_paper.py  view_valuation.py
mas_autogen/advance/workspace/dataanalysis/: tmp_code_87d828fa91f8edf27591aeec707fad95425d763fee677fe38da79f4513012514.python  tmp_code_b7203bd139f514e7e3e103f433a7dffcff1cffd3b9f5317f7b5cf24e95cd05f5.python  tmp_code_c7ab0bc170814c3711ace643c2a4f45eede26b751bf1a1291c949840527884b2.py  tmp_code_d4a1d1172fa5083168ee3d0fc8522e209bcb3c8755e97e35bd48d26c40ab1849.python
mas_autogen/advance/workspace/stockprice/: tmp_code_13a457a7ddda9c94cd15e1f1ce0527b31485362ad6204a9b99551d068a82b394.python  tmp_code_286b9a9e35c531fbc8df8f364938e67d28e40ee992bbc52f2f97d2a415e28998.py  tmp_code_2a7fc96b65a43faf1d2603349a98c41b1f50a158cf3ceb6bc6486f82fa1de98f.python  tmp_code_438a7194e33e28ae23911bf4c31c4b37574224ebb6430f476f917733bf1bf9b5.python  tmp_code_655104d9e555e5e6e24959838eb876f1c9020d6dee50402f4db3f1b133378815.python  tmp_code_73baaa0c22809ea87526b1015f8851a22d7e79f4d8a637962168c1b23d39bd93.python  tmp_code_7abea8bb205cde6185661f782fba9c9e682b4cd2c3dc3b101daaa5abd68e9174.python  tmp_code_7db77341827beeaa483923cbbb30545910c5a2f88f1a77caa7c01b28fea6dde5.python  tmp_code_9056e41b20f1f0bebdc5f1185f64107672dfc62108b067ffaca02e8131a7890b.python  tmp_code_b1a1926d72d5319b8890ff779c7116ef2f2fc3de70cafd15abc1a961b813d666.python  tmp_code_bbbec844fb32bfb382d11bc23660ae7e0a826150dcc06b6e5a872c80ab94a084.python  tmp_code_dadefc2bbd577658e46c16e45df0a0d95dab34d4939736b80e44ba058084e57a.python  tmp_code_e2c91badd705e26cf118145988f19afaf09eda476b19d0197893896beb9277f2.python  tmp_code_f638918df98b39aedc46e412c0ca2a934640a4f88180219253268a7d95ef2074.py
mas_autogen/advance/workspace/visualization/: tmp_code_524505290702b31c19971e2509605f54c2c1dc678184a6bc4d49b646127e0b50.python  tmp_code_89fbab1a8c2481f7117d632a5a44aed5da69feae413c01718827dbb14433aa99.python  tmp_code_9312150f23f743de31c9ac45e3305500409e27858530074e85c14ed5bfa13448.python  tmp_code_a10ffad7255c6d99eeb845aab26aca56eab0354beb97c4b128f0238ecd44cf60.python  tmp_code_b867c1dca3a070071e42f6538e680eeed6f2eaf6c7f34da08616ff2e9f17a4c6.python  tmp_code_c3e20d18041e873526afc541cc587d961c08373256e2609dadb455cb9be1da16.py  weight_vs_horsepower_data.txt
mas_autogen/base/: helloAgent.py  model_client_stream.py  response_format.py  use_context.py
mcp_base/: README.md  bmi_client.py  bmi_server.py  pyproject.toml
mcp_stock_analysis_demo/: .env.example  README.md  models.py  pyproject.toml  stock_client.py  stock_server.py  webSearch_clients.py  webSearch_server.py
mcp_stock_analysis_demo/services/: ai_analyzer.py  fund_service_async.py  stock_analyzer_service.py  stock_data_provider.py  stock_scorer.py  technical_indicator.py  us_stock_service_async.py
mcp_stock_analysis_demo/utils/: api_utils.py
