[project]
name = "a2a_base"   # 一定要和根目录下的模块名一致
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "mcp>=0.1.0",
    "asyncio>=3.4.3",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "duckduckgo_search>=3.9.0",
]