[project]
name = "mcp_stock_analysis_demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "akshare==1.17.9",
    "beautifulsoup4==4.13.5",
    "decorator==5.2.1",
    "duckduckgo_search==8.1.1",
    "fastapi-mcp==0.3.4",
    "fastapi_mcp_client==0.4.0",
    "html5lib==1.1",
    "jsonpath==0.82.2",
    "langchain-mcp-adapters",
    "lxml==6.0.1",
    "mcp",
    "mini-racer==0.12.4",
    "nest-asyncio==1.6.0",
    "primp==0.15.0",
    "soupsieve==2.7",
    "sse-starlette==3.0.2",
    "tabulate==0.9.0",
    "tomli==2.2.1",
    "watchfiles==1.1.0",
    "webencodings==0.5.1",
    "xlrd==2.0.2",
]